[project]
name = "ComfyUI-Scripting-Tools"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["# No external dependencies required"]

[project.urls]
Repository = "https://github.com/cluny85/ComfyUI-Scripting-Tools"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Scripting-Tools"
Icon = ""
