[project]
name = "ComfyUI-Scripting-Tools"
description = "A set of utility nodes for ComfyUI focused on scripting. Includes an enhanced UUID generator node."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["# No external dependencies required"]

[project.urls]
Repository = "https://github.com/cluny85/ComfyUI-Scripting-Tools"
#  Used by Comfy Registry https://comfyregistry.org
bugs = "https://github.com/cluny85/ComfyUI-Scripting-Tools/issues"
homepage = "https://github.com/cluny85/ComfyUI-Scripting-Tools"

[tool.comfy]
PublisherId = "cluny85"
DisplayName = "ComfyUI-Scripting-Tools"
Icon = ""
